--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "glob": "^9.3.2",
     "glob-parent": "^5.1.2",
     "has-flag": "^3.0.0",
+    "http-status-codes": "^2.2.0",
     "ignore-by-default": "^1.0.1",
     "is-binary-path": "^2.1.0",
     "is-extglob": "^2.1.1",
