--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "ts-node-dev": "^2.0.0",
     "undefsafe": "^2.0.5",
     "v8-compile-cache-lib": "^3.0.1",
-    "yn": "^3.1.1"
+    "yn": "^3.1.1",
+    "yup": "^1.1.1"
   }
 }
