--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Estudos sobre desenvolvimento de API REST em Node com TS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start:dev": "npx nodemon",
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js",
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
+    "@types/supertest": "^2.0.12",
     "abbrev": "^1.1.1",
     "acorn": "^8.8.2",
     "acorn-walk": "^8.2.0",
@@ -52,6 +54,7 @@
     "is-extglob": "^2.1.1",
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
+    "jest": "^29.5.0",
     "lru-cache": "^7.18.3",
     "make-error": "^1.3.6",
     "minimatch": "^3.1.2",
@@ -65,9 +68,11 @@
     "readdirp": "^3.6.0",
     "semver": "^5.7.1",
     "simple-update-notifier": "^1.1.0",
+    "supertest": "^6.3.3",
     "supports-color": "^5.5.0",
     "to-regex-range": "^5.0.1",
     "touch": "^3.1.0",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "undefsafe": "^2.0.5",
     "v8-compile-cache-lib": "^3.0.1",
