--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jest",
     "start:dev": "npx nodemon",
     "build": "rimraf ./build && tsc",
+    "knex:migrate": "npx knex --knexfile ./src/server/database/knex/Environment.ts migrate:latest",
+    "knex:rollback": "npx knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback",
+    "knex:rollback-all": "npx knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback --all",
     "start": "npm run build && node build/index.js",
     "dev": "ts-node-dev ./src/index.ts"
   },
@@ -55,6 +58,7 @@
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
     "jest": "^29.5.0",
+    "knex": "^2.4.2",
     "lru-cache": "^7.18.3",
     "make-error": "^1.3.6",
     "minimatch": "^3.1.2",
@@ -68,6 +72,7 @@
     "readdirp": "^3.6.0",
     "semver": "^5.7.1",
     "simple-update-notifier": "^1.1.0",
+    "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
     "supports-color": "^5.5.0",
     "to-regex-range": "^5.0.1",
